attempted to fix the side bar spacing with empty divs

--- a/css/breakpoints.css
+++ b/css/breakpoints.css
@@ -10,11 +10,11 @@
     }
 
     main{
-        margin-right: 13.8rem;
+        margin-right: 14rem;
     }
 
     .nav-section{
-        width: 13.8rem;
+        width: 14rem;
         flex-direction: column;
         justify-content: space-around;
         height: 100vh;
@@ -57,10 +57,8 @@
     nav a{
         text-align: center;
         font-weight: 400;
-
         margin: 0.5rem 0;
         padding: 0.4rem 1.8rem;
-
         border: var(--navbar-text-color) 0.18rem solid;
         border-radius: 10rem;
     }
@@ -97,6 +95,10 @@
         text-align: center;
         font-size: 0.7rem;
         font-weight: 200;
+    }
+
+    .space-fixer-div{
+        display: block; 
     }
 
 
