--- a/css/main.css
+++ b/css/main.css
@@ -159,6 +159,11 @@ nav a:hover, nav a:focus{
 
 main{
     flex-grow:1;
+    background-color: #FBFBFB;
+    opacity: 1;
+    background-image:  linear-gradient(#EFEEEE 1.1px, transparent 1.1px), linear-gradient(to right, #EFEEEE 1.1px, #FBFBFB 1.1px);
+    background-size: 23px 23px;
+    /* background-size: 1.3156rem 1.3156rem; */
 }
 
 .side-footer{
@@ -168,7 +173,7 @@ main{
 footer{
     background-color: var(--navbar-color);
     padding: 1rem;
-    margin-top: 1.5rem;
+
 }
 
 footer p{
@@ -177,4 +182,8 @@ footer p{
     text-align: center;
     font-size: 0.7rem;
     font-weight: 200;
+}
+
+.space-fixer-div{
+    display: none;
 }
